    - :func:`~mvpa2.misc.stats.binomial_proportion_ci` for computing
      confidence intervals on proportions of Bernoulli trial outcomes.

  * API changes

  * Enhancements (?? ENH, OPT, and NF commits)

    - :class:`~mvpa2.mappers.flatten.ProductFlattenMapper` accepts explicit names of factors in the constructor.

  * Fixes

    - :func:`~mvpa2.misc.plot.lightbox.plot_lightbox` should take a
      slice index from the last dimension, not the leading one if no
      `slices` argument was provided
    - Improved Python3k compatibility in :mod:`~mvpa2.base.state`, :mod:`~mvpa2.tests.test_testing.py`, :mod:`~mvpa2.tests`, and :mod:`~mvpa2.clfs.stats` modules, and in libsvmlrc msvc building.
    - Partial fix for compatibility with ancient scipy on SPARC using :mod:`~mvpa2.datasets.cosmo`.


* 2.3.1 (Tue, 20 May 2014)

  Primarily a bugfix release pushed out to avoid mvpa2.suite meltdown
  if new scipy 1.4.0 is used.

  * API changes

    - Deprecation: :class:`~mvpa2.base.param.Parameter` now uses `constraints` argument
      of type :class:`~mvpa2.base.constraints.Constraint` instead of string
      `allowedtype`.  `allowedtype` argument will be removed completely in the
      future 2.4 release.

  * New changes

    - :mod:`~mvpa2.clfs.dummies` now provides utterly useful
      :class:`~mvpa2.clfs.dummies.RandomClassifier` and others for code testing
      which could also be used to verify absent double-dipping etc.

  * Enhancements

    - :class:`~mvpa2.mappers.fx.FxMapper` now will provide consistent order
      of groups of items.  It also got a new argument `order` with available
      value of 'occurrence' to that groups would get ordered by their occurance
      in the original dataset.

  * Fixes

    - :class:`~mvpa2.mappers.corrstability.CorrStability` should be able to
      deal with other sample attributes (not only 'targets') and should divide
      by variance correctly to provide correlation coefficient as output.